--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VoiceAssistant</title>
     <script src="/static/main.js" defer></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+
 </head>
 <body>
-    <h1>Asistente de Voz Web</h1>
-  <button onclick= "hablar()"><span>Hablar</span></button>
-  <div id="respuesta">Di algo como "¿Qué hora es?"</div>
+    <h1>Asistente de Voz</h1>
+    <button id="escuchar"><span>Hablar con el Asistente</span></button>
+    <button id="detener"><span>Detener</span></button>
+    
+    <div id="resultado">
+        <p>Presiona el botón "Hablar con el Asistente" para comenzar.</p>
+    </div>
 </body>
 </html>
